# models/odontologia.diagnostico.go
@@ -11,8 +11,8 @@ import (
 
 type Diagnostico struct {
 	IdDiagnostico  int    `orm:"column(id_diagnostico);pk;auto"`
-	IdHojaHistoria *int   `orm:"column(id_hoja_historia);rel(fk);null"`
-	Diagnostivo    string `orm:"column(diagnostivo);null"`
+	IdHojaHistoria int    `orm:"column(id_hoja_historia);null"`
+	Diagnostico    string `orm:"column(diagnostico);null"`
 	Pronostico     string `orm:"column(pronostico);null"`
 	Evolucion      string `orm:"column(evolucion);null"`
 	Observaciones  string `orm:"column(observaciones);null"`
