# models/odontologia.examenEstomatologico.go
@@ -12,7 +12,7 @@ import (
 type ExamenEstomatologico struct {
 	IdExamenEstomatologico int    `orm:"column(id_examen_estomatologico);pk;auto"`
 	Observaciones          string `orm:"column(observaciones);null"`
-	IdHojaHistoria         *int   `orm:"column(id_hoja_historia);rel(fk);null"`
+	IdHojaHistoria         int    `orm:"column(id_hoja_historia);null"`
 	ArticulacionTemporo    string `orm:"column(articulacion_temporo);null"`
 	Labios                 string `orm:"column(labios);null"`
 	Lengua                 string `orm:"column(lengua);null"`
@@ -23,8 +23,8 @@ type ExamenEstomatologico struct {
 	Maxilares              string `orm:"column(maxilares);null"`
 	SenosMaxilares         string `orm:"column(senos_maxilares);null"`
 	MusculosMasticadores   string `orm:"column(musculos_masticadores);null"`
+	SistemaVascular        string `orm:"column(sistema_vascular);null"`
 	SistemaNervioso        string `orm:"column(sistema_nervioso);null"`
-	SistemaMuscular        string `orm:"column(sistema_muscular);null"`
 	SistemaLinfatico       string `orm:"column(sistema_linfatico);null"`
 	SistemaRegional        string `orm:"column(sistema_regional);null"`
 }
